# ncaa-player-pool

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETION_SUMMARY.md  CRONTAB_EXAMPLES.md  ESPN_API_SCHEMA.md  GOOGLE_SHEETS_SETUP.md  PROJECT_STATUS.md  QUICK_REFERENCE.txt  README.md  mkdocs.yml  ncaa-pool  pyproject.toml  role_setup.sql  setup-tournament.sh  update-tournament.sh
.github/workflows/: ci.yml
data/: player_data.csv
data/2024/: tournament_team_statistics.json
data/2024/games/: 827d2ffd-3d6b-42e6-b089-62b7b8e664d0.json
data/2025/: game_player_stats.csv  tournaments.json
data/espn/games/: game_401827631.json  response_0000.json  response_0001.json  response_0002.json  response_0003.json  response_0004.json
data/espn/teams/: response_0000.json  response_0001.json  response_0002.json  response_0003.json  response_0004.json  response_0005.json  response_0006.json  response_0007.json  response_0008.json  response_0009.json  response_0010.json  response_0011.json  response_0012.json  response_0013.json  response_0014.json  response_0015.json  response_0016.json  response_0017.json  response_0018.json  response_0019.json  response_0020.json  response_0021.json  response_0022.json  response_0023.json  team_248.json  team_248_roster.json  team_9.json
data/espn/tournaments/: scoreboard_current.json
data/games/: eaba35d4-535f-45b9-b38e-a614a9907e2c.json
docs/: cli.md  index.md
docs/api/: config.md  db.md  espn_api.md  index.md  models.md  sheets.md  transformers.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: daily-updates.md  google-sheets.md  tournament-setup.md
migrations/: 000_schema_role_creation.sql  001_initial_schema.sql  002_fix_game_stats_export_view.sql  003_add_name_team_to_player_exports_view.sql
ncaa-player-pool/: __init__.py  __main__.py  api_client.py  config.py  db.py  espn_api.py  fetch_test_data.py  logger.py  models.py  sheets.py  transformers.py
ncaa-player-pool/modules/: database.py  reg_season_stats.py  teams_players.py  tournament_states.py
src/ncaa_player_pool/: __init__.py  __main__.py  api_client.py  config.py  db.py  espn_api.py  fetch_test_data.py  logger.py  models.py  sheets.py  transformers.py
tests/: __init__.py  conftest.py  test_models.py
